<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ResetPasswordActivity"
    >

    <TextView
        android:id="@+id/textViewForgotPasswordTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgor_password"
        android:textAlignment="center"
        android:textSize="32sp"
        android:padding="16dp"/>

    <EditText
        android:id="@+id/editTextTextForgotEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/user_email"
        android:layout_margin="16dp"/>

    <Button
        android:id="@+id/buttonResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        />
</LinearLayout>